@@ -16,32 +16,10 @@
  */
 package org.apache.logging.log4j.core.config;
 
-import java.io.ByteArrayOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.Serializable;
-import java.lang.ref.WeakReference;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.ServiceLoader;
-import java.util.Set;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentMap;
-import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.concurrent.TimeUnit;
-
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.core.Appender;
 import org.apache.logging.log4j.core.Filter;
 import org.apache.logging.log4j.core.Layout;
-import org.apache.logging.log4j.core.LifeCycle;
 import org.apache.logging.log4j.core.LogEvent;
 import org.apache.logging.log4j.core.LoggerContext;
 import org.apache.logging.log4j.core.Version;
@@ -52,7 +30,6 @@ import org.apache.logging.log4j.core.async.AsyncLoggerConfigDelegate;
 import org.apache.logging.log4j.core.async.AsyncLoggerConfigDisruptor;
 import org.apache.logging.log4j.core.config.arbiters.Arbiter;
 import org.apache.logging.log4j.core.config.arbiters.SelectArbiter;
-import org.apache.logging.log4j.core.config.plugins.util.PluginBuilder;
 import org.apache.logging.log4j.core.filter.AbstractFilterable;
 import org.apache.logging.log4j.core.layout.PatternLayout;
 import org.apache.logging.log4j.core.lookup.ConfigurationStrSubstitutor;
@@ -64,32 +41,53 @@ import org.apache.logging.log4j.core.lookup.StrSubstitutor;
 import org.apache.logging.log4j.core.net.Advertiser;
 import org.apache.logging.log4j.core.script.ScriptManager;
 import org.apache.logging.log4j.core.script.ScriptManagerFactory;
-import org.apache.logging.log4j.core.util.Constants;
-import org.apache.logging.log4j.core.time.internal.DummyNanoClock;
-import org.apache.logging.log4j.core.util.Loader;
-import org.apache.logging.log4j.util.NameUtil;
-import org.apache.logging.log4j.core.util.Source;
 import org.apache.logging.log4j.core.time.NanoClock;
+import org.apache.logging.log4j.core.util.Constants;
+import org.apache.logging.log4j.core.util.Loader;
+import org.apache.logging.log4j.core.util.Source;
 import org.apache.logging.log4j.core.util.WatchManager;
 import org.apache.logging.log4j.core.util.Watcher;
 import org.apache.logging.log4j.core.util.WatcherFactory;
 import org.apache.logging.log4j.plugins.Node;
+import org.apache.logging.log4j.plugins.di.DI;
+import org.apache.logging.log4j.plugins.di.Injector;
+import org.apache.logging.log4j.plugins.di.Key;
+import org.apache.logging.log4j.plugins.di.Keys;
 import org.apache.logging.log4j.plugins.util.PluginManager;
 import org.apache.logging.log4j.plugins.util.PluginType;
+import org.apache.logging.log4j.plugins.util.TypeUtil;
+import org.apache.logging.log4j.util.NameUtil;
 import org.apache.logging.log4j.util.PropertiesUtil;
-import org.apache.logging.log4j.util.ServiceLoaderUtil;
+import org.apache.logging.log4j.util.ServiceRegistry;
+
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.Serializable;
+import java.lang.ref.WeakReference;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.ServiceLoader;
+import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
+import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.concurrent.TimeUnit;
+import java.util.function.Function;
 
 /**
  * The base Configuration. Many configuration implementations will extend this class.
  */
 public abstract class AbstractConfiguration extends AbstractFilterable implements Configuration {
 
-    private static final int BUF_SIZE = 16384;
-
     /**
      * The root node of the configuration.
      */
-    protected Node rootNode;
+    protected Node rootNode = new Node();
 
     /**
      * Listeners for configuration changes.
@@ -121,6 +119,7 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
      */
     protected ScriptManager scriptManager;
 
+    protected final Injector injector;
     /**
      * The Advertiser which exposes appender configurations to external systems.
      */
@@ -130,7 +129,7 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
     private String name;
     private ConcurrentMap<String, Appender> appenders = new ConcurrentHashMap<>();
     private ConcurrentMap<String, LoggerConfig> loggerConfigs = new ConcurrentHashMap<>();
-    private List<CustomLevelConfig> customLevels = Collections.emptyList();
+    private List<CustomLevelConfig> customLevels = List.of();
     private final ConcurrentMap<String, String> properties = new ConcurrentHashMap<>();
     private final StrLookup tempLookup = new Interpolator(properties);
     private final StrSubstitutor runtimeStrSubstitutor = new RuntimeStrSubstitutor(tempLookup);
@@ -138,10 +137,9 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
     private LoggerConfig root = new LoggerConfig();
     private final ConcurrentMap<String, Object> componentMap = new ConcurrentHashMap<>();
     private final ConfigurationSource configurationSource;
-    private final ConfigurationScheduler configurationScheduler = new ConfigurationScheduler();
-    private final WatchManager watchManager = new WatchManager(configurationScheduler);
+    private final ConfigurationScheduler configurationScheduler;
+    private final WatchManager watchManager;
     private AsyncLoggerConfigDisruptor asyncLoggerConfigDisruptor;
-    private NanoClock nanoClock = new DummyNanoClock();
     private final WeakReference<LoggerContext> loggerContext;
 
     /**
@@ -152,9 +150,17 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
         // The loggerContext is null for the NullConfiguration class.
         // this.loggerContext = new WeakReference(Objects.requireNonNull(loggerContext, "loggerContext is null"));
         this.configurationSource = Objects.requireNonNull(configurationSource, "configurationSource is null");
+        if (loggerContext != null) {
+            injector = loggerContext.getInjector();
+        } else {
+            // for NullConfiguration
+            injector = DI.createInjector();
+            injector.init();
+        }
         componentMap.put(Configuration.CONTEXT_PROPERTIES, properties);
         pluginManager = new PluginManager(Node.CATEGORY);
-        rootNode = new Node();
+        configurationScheduler = injector.getInstance(ConfigurationScheduler.class);
+        watchManager = injector.getInstance(WatchManager.class);
         setState(State.INITIALIZING);
     }
 
@@ -180,6 +186,7 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
 
     public void setScriptManager(final ScriptManager scriptManager) {
         this.scriptManager = scriptManager;
+        injector.registerBinding(ScriptManager.KEY, this::getScriptManager);
     }
 
     public PluginManager getPluginManager() {
@@ -219,18 +226,11 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
      */
     @Override
     public void initialize() {
-        LOGGER.debug(Version.getProductString() + " initializing configuration {}", this);
+        LOGGER.debug("{} initializing configuration {}", Version.getProductString(), this);
+        injector.registerBinding(Configuration.KEY, () -> this);
         runtimeStrSubstitutor.setConfiguration(this);
         configurationStrSubstitutor.setConfiguration(this);
-        try {
-            ServiceLoaderUtil.loadServices(ScriptManagerFactory.class,
-                            layer -> ServiceLoader.load(layer, ScriptManagerFactory.class),
-                            null).stream().findFirst().ifPresent(scriptManagerFactory ->
-                    scriptManager = scriptManagerFactory.createScriptManager(this, watchManager));
-        } catch (final LinkageError | Exception e) {
-            // LOG4J2-1920 ScriptEngineManager is not available in Android
-            LOGGER.info("Cannot initialize scripting support because this JRE does not support it.", e);
-        }
+        initializeScriptManager();
         pluginManager.collectPlugins(pluginPackages);
         final PluginManager levelPlugins = new PluginManager(Level.CATEGORY);
         levelPlugins.collectPlugins(pluginPackages);
@@ -253,6 +253,20 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
         LOGGER.debug("Configuration {} initialized", this);
     }
 
+    private void initializeScriptManager() {
+        try {
+            ServiceRegistry.getInstance()
+                    .getServices(ScriptManagerFactory.class, layer -> ServiceLoader.load(layer, ScriptManagerFactory.class),
+                            null)
+                    .stream()
+                    .findFirst()
+                    .ifPresent(factory -> setScriptManager(factory.createScriptManager(this, getWatchManager())));
+        } catch (final LinkageError | Exception e) {
+            // LOG4J2-1920 ScriptEngineManager is not available in Android
+            LOGGER.info("Cannot initialize scripting support because this JRE does not support it.", e);
+        }
+    }
+
     protected void initializeWatchers(final Reconfigurable reconfigurable, final ConfigurationSource configSource,
                  final int monitorIntervalSeconds) {
         if (configSource != null && (configSource.getFile() != null || configSource.getURL() != null)) {
@@ -260,9 +274,9 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
                 watchManager.setIntervalSeconds(monitorIntervalSeconds);
                 if (configSource.getFile() != null) {
                     final Source cfgSource = new Source(configSource);
-                    final long lastModifeid = configSource.getFile().lastModified();
+                    final long lastModified = configSource.getFile().lastModified();
                     final ConfigurationFileWatcher watcher = new ConfigurationFileWatcher(this, reconfigurable,
-                            listeners, lastModifeid);
+                            listeners, lastModified);
                     watchManager.watch(cfgSource, watcher);
                 } else {
                     if (configSource.getURL() != null) {
@@ -392,7 +406,7 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
             // LOG4J2-511, LOG4J2-392 stop AsyncAppenders first
             LOGGER.trace("{} stopping {} AsyncAppenders.", cls, async.size());
             for (final Appender appender : async) {
-                ((LifeCycle) appender).stop(timeout, timeUnit);
+                appender.stop(timeout, timeUnit);
             }
         }
 
@@ -400,7 +414,7 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
         int appenderCount = 0;
         for (int i = array.length - 1; i >= 0; --i) {
             if (array[i].isStarted()) { // then stop remaining Appenders
-                ((LifeCycle) array[i]).stop(timeout, timeUnit);
+                array[i].stop(timeout, timeUnit);
                 appenderCount++;
             }
         }
@@ -456,13 +470,7 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
     }
 
     protected Level getDefaultStatus() {
-        final String statusLevel = PropertiesUtil.getProperties().getStringProperty(
-                Constants.LOG4J_DEFAULT_STATUS_LEVEL, Level.ERROR.name());
-        try {
-            return Level.toLevel(statusLevel);
-        } catch (final Exception ex) {
-            return Level.ERROR;
-        }
+        return injector.getInstance(Constants.DEFAULT_STATUS_LEVEL_KEY);
     }
 
     protected void createAdvertiser(final String advertiserString, final ConfigurationSource configSource,
@@ -485,21 +493,20 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
             final String nodeName = advertiserNode.getName();
             final PluginType<?> type = pluginManager.getPluginType(nodeName);
             if (type != null) {
-                final Class<? extends Advertiser> clazz = type.getPluginClass().asSubclass(Advertiser.class);
-                try {
-                    advertiser = clazz.newInstance();
-                    advertisement = advertiser.advertise(advertiserNode.getAttributes());
-                } catch (final ReflectiveOperationException e) {
-                    LOGGER.error("{} attempting to instantiate advertiser: {}", e.getClass().getSimpleName(), nodeName, e);
-                }
+                advertiser = injector.getInstance(type.getPluginClass().asSubclass(Advertiser.class));
+                advertisement = advertiser.advertise(advertiserNode.getAttributes());
             }
         }
     }
 
-    @SuppressWarnings("unchecked")
     @Override
     public <T> T getComponent(final String componentName) {
-        return (T) componentMap.get(componentName);
+        return TypeUtil.cast(componentMap.get(componentName));
+    }
+
+    @Override
+    public <T> T getComponent(final Key<T> key) {
+        return injector.getInstance(key);
     }
 
     @Override
@@ -511,7 +518,7 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
         try {
             for (final Node child : node.getChildren()) {
                 if (child.getType() == null) {
-                    LOGGER.error("Unable to locate plugin type for " + child.getName());
+                    LOGGER.error("Unable to locate plugin type for {}", child.getName());
                     continue;
                 }
                 final Class<?> clazz = child.getType().getPluginClass();
@@ -521,7 +528,7 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
                 preConfigure(child);
             }
         } catch (final Exception ex) {
-            LOGGER.error("Error capturing node data for node " + node.getName(), ex);
+            LOGGER.error("Error capturing node data for node {}", node.getName(), ex);
         }
     }
 
@@ -545,7 +552,7 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
                     } else if (Arbiter.class.isAssignableFrom(clazz)) {
                         removeList.add(child);
                         try {
-                            final Arbiter condition = (Arbiter) createPluginObject(type, child, null);
+                            final Arbiter condition = injector.configure(child);
                             if (condition.isCondition()) {
                                 addList.addAll(child.getChildren());
                                 processConditionals(child);
@@ -573,7 +580,7 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
                 }
             }
         } catch (final Exception ex) {
-            LOGGER.error("Error capturing node data for node " + node.getName(), ex);
+            LOGGER.error("Error capturing node data for node {}", node.getName(), ex);
         }
     }
 
@@ -586,15 +593,14 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
      */
     protected List<Node> processSelect(final Node selectNode, final PluginType<?> type) {
         final List<Node> addList = new ArrayList<>();
-        final SelectArbiter select = (SelectArbiter) createPluginObject(type, selectNode, null);
+        final SelectArbiter select = injector.configure(selectNode);
         final List<Arbiter> conditions = new ArrayList<>();
         for (final Node child : selectNode.getChildren()) {
             final PluginType<?> nodeType = child.getType();
             if (nodeType != null) {
                 if (Arbiter.class.isAssignableFrom(nodeType.getPluginClass())) {
-                    final Arbiter condition = (Arbiter) createPluginObject(nodeType, child, null);
+                    final Arbiter condition = injector.configure(child);
                     conditions.add(condition);
-                    child.setObject(condition);
                 } else {
                     LOGGER.error("Invalid Node {} for Select. Must be a Condition",
                             child.getName());
@@ -617,6 +623,7 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
 
 
     protected void doConfigure() {
+        injector.registerBinding(Keys.SUBSTITUTOR_KEY, () -> configurationStrSubstitutor::replace);
         processConditionals(rootNode);
         preConfigure(rootNode);
         configurationScheduler.start();
@@ -624,7 +631,7 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
             final Node first = rootNode.getChildren().get(0);
             createConfiguration(first, null);
             if (first.getObject() != null) {
-                StrLookup lookup = (StrLookup) first.getObject();
+                StrLookup lookup = first.getObject();
                 runtimeStrSubstitutor.setVariableResolver(lookup);
                 configurationStrSubstitutor.setVariableResolver(lookup);
             }
@@ -772,9 +779,8 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
      * @return the Appender with the specified name or null if the Appender cannot be located.
      */
     @Override
-    @SuppressWarnings("unchecked")
     public <T extends Appender> T getAppender(final String appenderName) {
-        return appenderName != null ? (T) appenders.get(appenderName) : null;
+        return appenderName != null ? TypeUtil.cast(appenders.get(appenderName)) : null;
     }
 
     /**
@@ -1021,22 +1027,29 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
 
     @Override
     public void createConfiguration(final Node node, final LogEvent event) {
-        final PluginType<?> type = node.getType();
-        if (type != null && type.isDeferChildren()) {
-            node.setObject(createPluginObject(type, node, event));
+        final Function<String, String> stringSubstitutionStrategy;
+        if (event == null) {
+            stringSubstitutionStrategy = configurationStrSubstitutor::replace;
         } else {
-            for (final Node child : node.getChildren()) {
-                createConfiguration(child, event);
-            }
-
-            if (type == null) {
-                if (node.getParent() != null) {
-                    LOGGER.error("Unable to locate plugin for {}", node.getName());
-                }
-            } else {
-                node.setObject(createPluginObject(type, node, event));
-            }
+            stringSubstitutionStrategy = str -> runtimeStrSubstitutor.replace(event, str);
         }
+        final Injector injector = this.injector.copy().registerBinding(Keys.SUBSTITUTOR_KEY, () -> stringSubstitutionStrategy);
+        injector.configure(node);
+    }
+
+    /**
+     * This method is used by Arbiters to create specific children.
+     * @param node The Node.
+     * @return The created object or null;
+     */
+    public Object createPluginObject(final Node node) {
+        if (this.getState().equals(State.INITIALIZING)) {
+            final Injector injector =
+                    this.injector.copy().registerBinding(Keys.SUBSTITUTOR_KEY, () -> configurationStrSubstitutor::replace);
+            return injector.configure(node);
+        }
+        LOGGER.warn("Plugin Object creation is not allowed after initialization");
+        return null;
     }
 
     /**
@@ -1044,90 +1057,11 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
      * @param type The PluginType.
      * @param node The Node.
      * @return The created object or null;
+     * @deprecated use {@link #createPluginObject(Node)}
      */
+    @Deprecated
     public Object createPluginObject(final PluginType<?> type, final Node node) {
-        if (this.getState().equals(State.INITIALIZING)) {
-            return createPluginObject(type, node, null);
-        }
-        LOGGER.warn("Plugin Object creation is not allowed after initialization");
-        return null;
-    }
-
-    /**
-     * Invokes a static factory method to either create the desired object or to create a builder object that creates
-     * the desired object. In the case of a factory method, it should be annotated with
-     * {@link org.apache.logging.log4j.plugins.PluginFactory}, and each parameter should be annotated with
-     * an appropriate plugin annotation depending on what that parameter describes. Parameters annotated with
-     * {@link org.apache.logging.log4j.plugins.PluginAttribute} must be a type that can be converted from a
-     * string using one of the {@link org.apache.logging.log4j.plugins.convert.TypeConverter TypeConverters}
-     * . Parameters with {@link org.apache.logging.log4j.plugins.PluginElement} may be any plugin class or
-     * an array of a plugin class. Collections and Maps are currently not supported, although the factory method that is
-     * called can create these from an array.
-     *
-     * Plugins can also be created using a builder class that implements
-     * {@link org.apache.logging.log4j.plugins.util.Builder}. In that case, a static method annotated with
-     * {@link org.apache.logging.log4j.plugins.PluginBuilderAttribute} should create the builder class, and
-     * the various fields in the builder class should be annotated similarly to the method parameters. However, instead
-     * of using PluginAttribute, one should use
-     * {@link org.apache.logging.log4j.plugins.PluginBuilderAttribute} where the default value can be
-     * specified as the default field value instead of as an additional annotation parameter.
-     *
-     * In either case, there are also annotations for specifying a
-     * {@link org.apache.logging.log4j.core.config.Configuration} (
-     * {@link org.apache.logging.log4j.core.config.plugins.PluginConfiguration}) or a
-     * {@link org.apache.logging.log4j.plugins.Node} (
-     * {@link org.apache.logging.log4j.plugins.PluginNode}).
-     *
-     * Although the happy path works, more work still needs to be done to log incorrect parameters. These will generally
-     * result in unhelpful InvocationTargetExceptions.
-     *
-     * @param type the type of plugin to create.
-     * @param node the corresponding configuration node for this plugin to create.
-     * @param event the LogEvent that spurred the creation of this plugin
-     * @return the created plugin object or {@code null} if there was an error setting it up.
-     * @see org.apache.logging.log4j.core.config.plugins.util.PluginBuilder
-     * @see org.apache.logging.log4j.plugins.inject.ConfigurationInjector
-     * @see org.apache.logging.log4j.plugins.convert.TypeConverter
-     */
-    private Object createPluginObject(final PluginType<?> type, final Node node, final LogEvent event) {
-        final Class<?> clazz = type.getPluginClass();
-
-        if (Map.class.isAssignableFrom(clazz)) {
-            try {
-                return createPluginMap(node);
-            } catch (final Exception e) {
-                LOGGER.warn("Unable to create Map for {} of class {}", type.getElementName(), clazz, e);
-            }
-        }
-
-        if (Collection.class.isAssignableFrom(clazz)) {
-            try {
-                return createPluginCollection(node);
-            } catch (final Exception e) {
-                LOGGER.warn("Unable to create List for {} of class {}", type.getElementName(), clazz, e);
-            }
-        }
-
-        return new PluginBuilder(type).setConfiguration(this).setConfigurationNode(node).forLogEvent(event).build();
-    }
-
-    private static Map<String, ?> createPluginMap(final Node node) {
-        final Map<String, Object> map = new LinkedHashMap<>();
-        for (final Node child : node.getChildren()) {
-            final Object object = child.getObject();
-            map.put(child.getName(), object);
-        }
-        return map;
-    }
-
-    private static Collection<?> createPluginCollection(final Node node) {
-        final List<Node> children = node.getChildren();
-        final Collection<Object> list = new ArrayList<>(children.size());
-        for (final Node child : children) {
-            final Object object = child.getObject();
-            list.add(object);
-        }
-        return list;
+        return createPluginObject(node);
     }
 
     private void setParents() {
@@ -1157,27 +1091,20 @@ public abstract class AbstractConfiguration extends AbstractFilterable implement
      * @param is the InputStream to read into a byte array buffer.
      * @return a byte array of the InputStream contents.
      * @throws IOException if the {@code read} method of the provided InputStream throws this exception.
+     * @deprecated use {@link InputStream#readAllBytes()}
      */
+    @Deprecated(since = "3.0.0")
     protected static byte[] toByteArray(final InputStream is) throws IOException {
-        final ByteArrayOutputStream buffer = new ByteArrayOutputStream();
-
-        int nRead;
-        final byte[] data = new byte[BUF_SIZE];
-
-        while ((nRead = is.read(data, 0, data.length)) != -1) {
-            buffer.write(data, 0, nRead);
-        }
-
-        return buffer.toByteArray();
+        return is.readAllBytes();
     }
 
     @Override
     public NanoClock getNanoClock() {
-        return nanoClock;
+        return injector.getInstance(NanoClock.class);
     }
 
     @Override
     public void setNanoClock(final NanoClock nanoClock) {
-        this.nanoClock = Objects.requireNonNull(nanoClock, "nanoClock");
+        injector.registerBinding(NanoClock.KEY, () -> nanoClock);
     }
 }
